# notifications_sprint_1

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci_notification.yml
notifications_service/api_service/: .env.example
notifications_service/api_service/docker/: Dockerfile
notifications_service/api_service/src/: main.py
notifications_service/api_service/src/core/: settings.py
notifications_service/api_service/src/db/: mongo.py  rmq.py
notifications_service/api_service/src/models/: movies.py  notifications.py  users.py
notifications_service/api_service/src/services/: notifications_service.py
notifications_service/api_service/src/services/handlers/: handlers.py
notifications_service/api_service/src/util/: data_fetching_util.py  templates_util.py
notifications_service/api_service/src/util/db_util/: mongo_init.py
notifications_service/api_service/src/util/scheduler/: jobs.py  scheduler.py
notifications_service/api_service/src/util/templates/: most_viewed_movies.html  new_episode.html  user_registered.html
notifications_service/mock_data_api/docker/: Dockerfile  docker-entrypoint.sh
notifications_service/mock_data_api/src/: main.py
notifications_service/worker/: .env.example
notifications_service/worker/docker/: Dockerfile  wait-for-it.sh
notifications_service/worker/src/: main.py
notifications_service/worker/src/core/: config.py
notifications_service/worker/src/rabbit/: consumer.py
notifications_service/worker/src/sender/: base_sender.py  sms_sender.py  smtp_sender.py  telegram_sender.py
(+2 files in other folders)
