[tool.poetry]
name = "notifications-sprint-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.27.0.post1"
orjson = "^3.9.13"
jinja2 = "^3.1.3"
motor = "^3.3.2"
aio-pika = "^9.4.0"
httpx = "^0.26.0"
apscheduler = "^3.10.4"
aiosmtplib = "3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
